fix: mobile nav overflow issue
-Adjust styling for mobile nav to remove the unwanted overflow on the horizontal axis.
-Adjust max height for skeleton pages for both desktop and mobile resolutions.

--- a/client/src/components/navigation/styles/NavBar.module.css
+++ b/client/src/components/navigation/styles/NavBar.module.css
@@ -38,10 +38,6 @@
   display: none;
 }
 
-.logo {
-  margin-right: 0;
-}
-
 .main-nav {
   display: flex;
   position: relative;
@@ -120,10 +116,6 @@
       display: none;
       border: transparent;
     }
-  }
-
-  .logo {
-    margin-right: auto;
   }
 
   .burger-open,
